spacing fixes for table

--- a/client/src/components/helpers/_placeholders.scss
+++ b/client/src/components/helpers/_placeholders.scss
@@ -22,6 +22,21 @@
   font-weight: normal;
 }
 
+%modal-header {
+  .modal-title {
+    h2 {
+      font-size: 25px;
+      margin: 0;
+    }
+    h3 {
+      font-size: 20px;
+      font-weight: lighter;
+      color: $text-grey;
+      margin: 0;
+    }
+  }
+}
+
 %modal-body {
   max-height: 50vh;
   min-height: 25vh;
